added force graph

--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -15,3 +15,61 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+div.node {
+  padding: 10px;
+  border-radius: 12px;
+  border-width: 3px;
+  box-sizing: border-box;
+  word-wrap: break-word;
+  word-break: break-all;
+  border-color: #38bdf8;
+
+
+}
+
+.node :global .react-flow__handle {
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  pointer-events: none;
+}
+
+path.react-flow__edge-path {
+  opacity: 0;
+  animation: fadein 0.3s ease-in-out;
+  animation-fill-mode: forwards;
+}
+
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: orange; }
+}
+
+@keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+
+.node {
+  opacity: 0;
+  animation: fadein 0.8s ease-in-out;
+  animation-fill-mode: forwards;
+}
+
+.node .react-flow__handle {
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  pointer-events: none;
+}
