--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -103,3 +103,14 @@ path.react-flow__edge-path {
 .node:hover {
   cursor: pointer;
 }
+
+.canvas-hide {
+  display: none;
+  opacity: 0;
+}
+
+.canvas-show {
+  display: block;
+  opacity: 1;
+
+}
