--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -24,8 +24,10 @@ div.node {
   border-width: 3px;
   box-sizing: border-box;
   overflow-wrap: anywhere;
-  border-color: #38bdf8;
   font-weight: normal;
+
+  border-color: black;
+
 }
 
 .node :global .react-flow__handle {
@@ -74,11 +76,13 @@ path.react-flow__edge-path {
   animation: fadein 0.8s ease-in-out, pulse-animation 0.65s;
   animation-fill-mode: forwards;
   animation-iteration-count: 1,0;
-
 }
 
+.noloading {
+  animation-iteration-count: 1,0;
+}
 .loading {
-  animation-iteration-count: 1,infinite;
+  animation-iteration-count: 1,infinite !important;
 }
 
 
@@ -92,12 +96,24 @@ path.react-flow__edge-path {
 }
 
 .tw-node {
+  font-size:small;
   pointer-events: none;
   display: -webkit-box;
   max-width: 22rem;
-  -webkit-line-clamp: 10;
+  -webkit-line-clamp: 12;
   -webkit-box-orient: vertical;
   overflow: hidden;
+
+  font-family:Arial, Helvetica, sans-serif;
+  font-weight: bold;
+
+}
+.node-summary {
+  background-color: #FFDB58 !important;
+}
+
+.node-dotpoint {
+  background-color: #ffe588 !important;
 }
 
 .node:hover {
