--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap');
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -16,7 +18,68 @@ code {
     monospace;
 }
 
+.nav-logo {
+  -webkit-text-stroke: 1px black;
+  font-weight: bold;
+  font-size: 40px;
+  color: #D7D7D7;
+  text-shadow: 2px 2px black;
+}
 
+.nav-item {
+  font-family: 'Inter', sans-serif;
+  font-weight: bold;
+  background-color: #E7E7E7;
+  box-shadow: 3px 3px black;
+  width: 87px;
+  animation: shiftButtonUp 0.2s ease-in-out;
+  position: relative;
+}
+
+.nav-item:hover {
+  animation: shiftButtonDown 0.2s ease-in-out;
+  animation-fill-mode: forwards;
+
+}
+
+@keyframes shiftButtonDown {
+  from {
+    box-shadow: 3px 3px black;
+    top: 0px;
+    left: 0px;
+  }
+
+  to {
+    box-shadow: 0px 0px black;
+    top: 2px;
+    left: 2px;
+  }
+}
+
+@keyframes shiftButtonUp {
+  from {
+    box-shadow: 0px 0px black;
+    top: 2px;
+    left: 2px;
+  }
+
+  to {
+    box-shadow: 3px 3px black;
+    top: 0px;
+    left: 0px;
+  }
+}
+
+.landing-header-text {
+  color:#FFF4F7 ;
+  text-shadow: 3px 3px black;
+  -webkit-text-stroke: 2px black;
+
+}
+
+.landing-subheader-text {
+  font-weight: 500;
+}
 div.node {
   padding: 10px;
   width: 22rem;
@@ -43,6 +106,25 @@ path.react-flow__edge-path {
   animation: fadein 0.3s ease-in-out;
   animation-fill-mode: forwards;
 }
+
+.skim-it-btn {
+  font-family: 'Inter', sans-serif;
+  font-weight: bold;
+  background-color: #E7E7E7;
+  box-shadow: 3px 3px black;
+  border: 3px solid black;
+  font-size: 1.2rem;
+  border-radius: 5px;
+  padding: 0.1rem 1.2rem;
+  animation: shiftButtonUp 0.1s ease-in-out;
+  position: relative;
+}
+.skim-it-btn:hover {
+  animation: shiftButtonDown 0.1s ease-in-out;
+  animation-fill-mode: forwards;
+}
+
+
 
 @keyframes typing {
   from { width: 0 }
@@ -109,11 +191,11 @@ path.react-flow__edge-path {
 
 }
 .node-summary {
-  background-color: #FFDB58 !important;
+  background-color: white !important;
 }
 
 .node-dotpoint {
-  background-color: #ffe588 !important;
+  background-color: white !important;
 }
 
 .node:hover {
