Fixed node graph issue

--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -155,45 +155,51 @@ path.react-flow__edge-path {
 
 @keyframes pulse-animation {
   0% {
-    box-shadow: 0 0 0 0px rgba(0, 0, 0, 0.0.05);
+    box-shadow: 0 0 0 0px rgb(0, 0, 0, 0.15);
   }
   100% {
-    box-shadow: 0 0 0 12px rgba(0, 0, 0, 0.05);
+    box-shadow: 0 0 0 12px rgb(0, 0, 0, 0.15);
   }
 }
 
 @keyframes pulse-error-animation {
   0% {
-    box-shadow: 0 0 0 0px rgba(255, 0, 0, 0.0.05);
+    box-shadow: 0 0 0 0px rgba(255, 0, 0, 0.10);
   }
   100% {
-    box-shadow: 0 0 0 12px rgba(255, 0, 0, 0.05);
+    box-shadow: 0 0 0 12px rgba(255, 0, 0, 0.10);
   }
 }
 
 .node {
-  opacity: 0;
-  animation: fadein 0.8s ease-in-out, pulse-animation 0.65s, pulse-error-animation 0.65s;
-  animation-fill-mode: forwards;
-  animation-iteration-count: 1,0,0;
   border: 4px solid black !important;
-  box-shadow: 4px 4px black;
   position: relative;
 }
 
-
-.noloading {
-  animation-iteration-count: 1,0;
+.node-start {
+  opacity: 0;
+  box-shadow: 4px 4px black;
+  animation-name: fadein;
+  animation-duration: 0.8s;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+  animation-iteration-count: 1;
 }
 
 .loading {
-  animation-iteration-count: 1,infinite, 0 !important;
-  box-shadow: 0 0 0 0px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 0 0 0px rgba(0, 0, 0, 0.544);
+  animation-name: pulse-animation;
+  animation-duration:0.65s;
+  animation-timing-function: ease-out;
+  animation-iteration-count: infinite;
 }
 
 .loading-error {
-  animation-iteration-count: 1,0, infinite !important;
   box-shadow: 0 0 0 0px rgba(255, 0, 0, 0.05);
+  animation-name:pulse-error-animation;
+  animation-duration:0.65s;
+  animation-timing-function: ease-out;
+  animation-iteration-count:infinite;
 }
 
 
@@ -205,8 +211,6 @@ path.react-flow__edge-path {
   pointer-events: none;
 
 }
-
-
 
 .tw-node {
   font-size:large;
