--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -5,6 +5,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap');
 
+@font-face {
+  font-family: 'Argentum Sans';
+  src: url('assets/fonts/ArgentumSans-Medium.ttf') format('truetype');
+}
+
 :root {
   --color1: #e5b3df;
   --color2: #d1a5fe;
@@ -13,6 +18,11 @@
   --color5: #e822d1;
   --color6: #d1a5fe;
   --color7: #e5b3df;
+  background: linear-gradient(105.18deg, #D5FFFC 0%, #BBC2FF 100%);
+  min-height: 100%;
+}
+
+html, body {
 }
 
 body {
@@ -22,11 +32,22 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  margin: 0;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.home {
+}
+
+.signin-form-bg {
+  background: linear-gradient(105.18deg, #D5FFFC 0%, #BBC2FF 100%);
+}
+.create-account {
+  background: linear-gradient(105.18deg, #D5FFFC 0%, #BBC2FF 100%);
 }
 
 .nav-logo {
@@ -40,7 +61,7 @@ code {
 .nav-item {
   font-family: 'Inter', sans-serif;
   font-weight: bold;
-  background-color: #E7E7E7;
+  background-color: #BBC2FF;
   box-shadow: 3px 3px black;
   width: 87px;
   animation: shiftButtonUp 0.2s ease-in-out;
@@ -134,9 +155,11 @@ code {
 }
 
 .landing-header-text {
-  color:#FFF4F7 ;
-  text-shadow: 3px 3px black;
-  -webkit-text-stroke: 2px black;
+  background: linear-gradient(90deg, #30BBB2 0%, #303EBB 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-fill-color: transparent;
 
 }
 
@@ -144,11 +167,12 @@ code {
 
 .landing-subheader-text {
   font-weight: 500;
+  color: #857676;
 }
 div.node {
-  padding: 10px;
-  width: 22rem;
-  border-radius: 12px;
+  padding: 1rem 1.2rem;
+  width: 28rem;
+  border-radius: 10px;
   border-width: 3px;
   box-sizing: border-box;
   overflow-wrap: anywhere;
@@ -174,13 +198,14 @@ path.react-flow__edge-path {
 .skim-it-btn {
   font-family: 'Inter', sans-serif;
   font-weight: bold;
-  background-color: #E7E7E7;
+  background-color: #30BBB2;
   box-shadow: 3px 3px black;
   border: 3px solid black;
   font-size: 1.2rem;
   border-radius: 5px;
   padding: 0.1rem 1.2rem;
   animation: shiftButtonUp 0.1s ease-in-out;
+  position: relative;
 }
 
 .skim-it-btn:hover {
@@ -224,7 +249,7 @@ path.react-flow__edge-path {
 
 
 .restart-canvas-btn {
-  background-color:#ffffff;
+  background-color:#D4FFFC;
   border: 2px solid black;
 }
 
@@ -271,7 +296,7 @@ path.react-flow__edge-path {
 }
 
 .node {
-  border: 4px solid black !important;
+  border: 5px solid black !important;
   position: relative;
 }
 
@@ -312,26 +337,26 @@ path.react-flow__edge-path {
 }
 
 .tw-node {
-  font-size:large;
+  font-size: large;
   pointer-events: none;
   display: -webkit-box;
-  max-width: 22rem;
-  -webkit-line-clamp: 12;
+  max-width: 28rem;
+  -webkit-line-clamp: 14;
   -webkit-box-orient: vertical;
   overflow: hidden;
 
-  font-family: 'Roboto';
+  font-family: 'Argentum Sans', sans-serif;
   color: black;
   font-weight: 500;
-  text-align: left;
+  text-align:left;
 
 }
 .node-summary {
-  background-color: #E7E7E7 !important;
+  background-color: #D4FFFC !important;
 }
 
 .node-dotpoint {
-  background-color: white !important;
+  background-color: #BBC2FF !important;
 }
 
 
@@ -340,7 +365,7 @@ path.react-flow__edge-path {
   height: auto;
 }
 .logo1-img {
-  width: 170px;
+  width: 180px;
   height: auto;
 }
 
